--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "@tensorflow-models/blazeface": "^0.1.0",
     "@tensorflow/tfjs": "^4.10.0",
     "@tensorflow/tfjs-layers": "^4.10.0",
+    "axios": "^1.5.1",
+    "chart.js": "^4.4.0",
+    "ngx-spinner": "^16.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
